<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_search_info"
        android:icon="@drawable/ic_search"
        android:title="@string/search_info" />

    <item
        android:id="@+id/nav_manage_noti"
        android:icon="@drawable/ic_create_notification"
        android:title="@string/manage_notification" />

    <item
        android:id="@+id/nav_feedback"
        android:icon="@drawable/ic_feedback_light"
        android:title="@string/feedback" />

    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_account"
        android:title="@string/user_account" />
</menu>