<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Phần chào -->
        <TextView
            android:id="@+id/txtWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:id="@+id/txtGreeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/greeting"
            android:textSize="20sp"
            android:textColor="@android:color/darker_gray"
            android:layout_marginBottom="20dp"/>

        <!-- Tiêu đề Thông tin chung -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notifications"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginBottom="8dp"
            android:textColor="@android:color/black"/>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:queryHint="@string/search_title"
            app:iconifiedByDefault="false"
            android:background="@drawable/search_view_background" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewNotifications"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>
</ScrollView>
