<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white">

    <!-- Phần chào -->
    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:id="@+id/txtGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting"
        android:textSize="20sp"
        android:textColor="@android:color/darker_gray"
        android:layout_marginBottom="20dp"/>

    <!-- Tiêu đề Thông tin chung -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/highlighted_notifications"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerHighlightedNotifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:scrollbars="none"/>

    <LinearLayout
        android:id="@+id/indicatorLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp" />

    <!-- Tiêu đề Tiện ích -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/utilities"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Scroll ngang -->
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="0dp">

            <!-- Nút 1: Thông báo -->
            <LinearLayout
                android:id="@+id/layoutNotification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginEnd="36dp">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/bg_circle_blue"
                    android:src="@drawable/ic_notification_light"
                    android:contentDescription="@string/notifications"
                    android:scaleType="fitXY"
                    android:padding="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notifications"
                    android:textSize="16sp"
                    android:gravity="center"/>
            </LinearLayout>

            <!-- Nút 2: Hóa đơn -->
            <LinearLayout
                android:id="@+id/layoutFinance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginEnd="36dp">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/bg_circle_blue"
                    android:padding="16dp"
                    android:contentDescription="@string/bill"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_bill" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/finance"
                    android:textSize="16sp"
                    android:gravity="center"/>
            </LinearLayout>

            <!-- Nút 4: Phản hồi -->
            <LinearLayout
                android:id="@+id/layoutFeedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginEnd="36dp">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/bg_circle_blue"
                    android:contentDescription="@string/feedback"
                    android:src="@drawable/ic_feedback_light"
                    android:scaleType="fitXY"
                    android:padding="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feedback"
                    android:textSize="16sp"
                    android:gravity="center"/>
            </LinearLayout>

            <!-- Nút 5: Cài đặt -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginEnd="36dp">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/bg_circle_blue"
                    android:src="@drawable/ic_setting_light"
                    android:contentDescription="@string/settings"
                    android:scaleType="fitXY"
                    android:padding="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    android:textSize="16sp"
                    android:gravity="center"/>
            </LinearLayout>

            <!-- Nút 6: Hỗ trợ -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginEnd="36dp">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/bg_circle_blue"
                    android:src="@drawable/ic_support_light"
                    android:contentDescription="@string/support"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:padding="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/support"
                    android:textSize="16sp"
                    android:gravity="center"/>
            </LinearLayout>

            <!-- Thêm các nút khác ở đây -->
        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>
