<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/white">

    <!-- Phần chào -->
    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:id="@+id/txtGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting"
        android:textSize="20sp"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/txtWelcome"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="12dp"/>

    <!-- Tiêu đề Phản hồi -->
    <TextView
        android:id="@+id/textViewFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback_report"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/txtGreeting"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:textColor="@android:color/black"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewFeedback"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFeedback" />

    <Button
        android:id="@+id/btnSendFeedback"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/send_report"
        android:textSize="18sp"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="0dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
