<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Phần chào -->
        <TextView
            android:id="@+id/txtWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:id="@+id/txtGreeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/greeting"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp" />

        <!-- Tiêu đề Thông tin chung -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finance"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginBottom="8dp"
            android:textColor="@android:color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                app:queryHint="@string/search_title"
                app:iconifiedByDefault="false"
                android:background="@drawable/search_view_background" />

            <Spinner
                android:id="@+id/spinner_filter"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:layout_marginStart="8dp"
                android:background="@drawable/spinner_background"
                android:textColor="@color/black"
                android:entries="@array/finance_filter_options" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewReceipts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>
</ScrollView>
