<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account_related.ForgetPasswordEnterPhoneActivity">

    <EditText
        android:id="@+id/enterPhoneNumberForget"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:autofillHints="phone"
        android:ems="10"
        android:hint="@string/enter_phone_number_text"
        android:inputType="phone"
        android:minHeight="56dp"
        android:singleLine="true"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewChangePassword" />

    <Button
        android:id="@+id/buttonGetOTPForget"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="144dp"
        android:text="@string/get_otp_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPhoneNumberForget"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textViewChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/forgot_password_text"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>